src/compile/__fixtures__/invalid/bad-exports/components/helper.js
// No @exports comment here — this should cause a compile error

function drawHelper(p) {
  p.fill(255);
  p.ellipse(200, 200, 50, 50);
}
